# RPi-dishwasher

./: .gitignore  CMakeLists.txt  README.md  dishwasher.cbp  dishwasher.depend  dishwasher.layout
src/: automat.cpp  automat.h  bancopymove.h  base.cpp  base.h  diagnostic.cpp  diagnostic.h  dishwash-config.h  dishwash.cpp  dishwash.h  display.cpp  display.h  input.cpp  input.h  logic.cpp  logic.h  main.cpp  output.h  staticerror.cpp  staticerror.h  test-display.cpp  test-input.cpp  test-keyboard.h  test-main.cpp  test-output.cpp  timer.cpp  timer.h
src/log/: Log.h  log.cpp  log.h  logstdthreadostream.cpp
